# faker2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  MANIFEST.in  Makefile  PARITY.md  README.md  README.rst  VERSION  coverage.json  dev-requirements.txt  generate_stubs.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  coverage-badge.yml  docs.yml  publish.yml  release.yml  rust-ci.yml  rust-release.yml  wheels.yml
data/: README.md  balanced_params.json  last_names.parquet  recipes.json
docs/: conf.py  index.rst  naming.rst
faker/providers/bank/en_IN/: __init__.py
faker/providers/company/ba_RU/: __init__.py
faker/providers/company/be_BY/: __init__.py
faker/providers/company/bo_CN/: __init__.py
faker/providers/company/br_FR/: __init__.py
faker/providers/company/bs_BA/: __init__.py
faker/providers/company/fo_FO/: __init__.py
faker/providers/company/gl_ES/: __init__.py
faker/providers/company/haw_US/: __init__.py
faker/providers/company/ht_HT/: __init__.py
faker/providers/company/kk_KZ/: __init__.py
faker/providers/company/km_KH/: __init__.py
faker/providers/company/kn_IN/: __init__.py
faker/providers/company/la/: __init__.py
faker/providers/company/mi_NZ/: __init__.py
faker/providers/company/ml_IN/: __init__.py
faker/providers/company/mn_MN/: __init__.py
faker/providers/company/pa_IN/: __init__.py
faker/providers/company/sa_IN/: __init__.py
faker/providers/company/sd_PK/: __init__.py
faker/providers/company/sq_AL/: __init__.py
faker/providers/company/sr_RS/: __init__.py
faker/providers/company/te_IN/: __init__.py
faker/providers/person/af_ZA/: __init__.py
faker/providers/person/am_ET/: __init__.py
faker/providers/person/be_BY/: __init__.py
faker/providers/person/bo_CN/: __init__.py
faker/providers/person/br_FR/: __init__.py
faker/providers/person/bs_BA/: __init__.py
faker/providers/person/cy_GB/: __init__.py
faker/providers/person/eu_ES/: __init__.py
faker/providers/person/fo_FO/: __init__.py
faker/providers/person/gl_ES/: __init__.py
faker/providers/person/ht_HT/: __init__.py
faker/providers/person/hu_HU/: __init__.py
faker/providers/person/ja_JP/: __init__.py
faker2/: __init__.py  cli.py  config.py  documentor.py  factory.py  proxy.py  proxy.pyi
faker2/contrib/pytest/: plugin.py
faker2/naming/: __init__.py  gender.py  grammar.py  realnames.py
faker2/providers/: __init__.py
faker2/providers/color/: color.py
faker2/providers/date_time/: __init__.py
faker2/providers/doi/: __init__.py
faker2/providers/misc/: __init__.py
faker2/providers/passport/: __init__.py
faker2/providers/person/: __init__.py
faker2/providers/python/: __init__.py
faker2/providers/sbn/: __init__.py
faker2/sphinx/: autodoc.py  docstring.py  documentor.py
faker2/utils/: datasets.py  decorators.py  distribution.py
native/: .gitignore  Cargo.toml  README.md  pyproject.toml
native/python/faker2/: __init__.py
native/python/faker2_rs/: __init__.py
native/src/: lib.rs
rust/: Cargo.toml  README.md
rust/examples/: bench.rs  benchall.rs  benchfull.rs
rust/src/: faker.rs  gender.rs  grammar.rs  lib.rs  locale.rs  realnames.rs  rng.rs
rust/src/providers/: address.rs  company.rs  data.rs  internet.rs  lorem.rs  misc.rs  mod.rs  person.rs
rust/src/providers/algo/: address.rs  automotive.rs  bank.rs  barcode.rs  color.rs  company.rs  credit_card.rs  currency.rs  date_time.rs  doi.rs  file.rs  geo.rs  internet.rs  isbn.rs  job.rs  lorem.rs  misc.rs  mod.rs  passport.rs  person.rs  phone_number.rs  python.rs  sbn.rs  user_agent.rs
rust/tests/: algo.rs  locales.rs  realnames.rs  smoke.rs
scripts/: bench_naming.py  check_test_class_order.py  sweep_balanced.py
tests/: test_cli_arg_parsing.py  test_decode.py  test_factory.py  test_gender_grammar.py  test_generator.py  test_optional.py  test_providers_formats.py  test_proxy.py  test_realnames.py  test_unique.py  test_unique_exclude.py  test_version.py
tests/mymodule/en_US/: __init__.py
tests/providers/: __init__.py  conftest.py  test_address.py  test_automotive.py  test_bank.py  test_barcode.py  test_color.py  test_company.py  test_credit_card.py  test_currency.py  test_date_time.py  test_doi.py  test_dynamic.py  test_emoji.py  test_enum.py  test_file.py  test_geo.py  test_gladia_locales.py  test_internet.py  test_isbn.py  test_job.py  test_lorem.py  test_misc.py  test_passport.py  test_person.py  test_phone_number.py  test_profile.py  test_python.py  test_sbn.py  test_ssn.py  test_user_agent.py
tests/pytest/: test_autouse_faker_locale.py  test_autouse_faker_seed.py  test_manual_injection.py  test_unique_clear.py
tests/sphinx/: test_docstring.py  test_validator.py
tests/utils/: test_text_utils_slugify.py  test_utils.py
(+147 files in other folders)
