[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "faker2"
version = "40.28.1.post1"
description = "faker2 — pure-Rust fake-data generator with a thin Python binder (PyO3)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/jqueguiner/faker2"
Documentation = "https://jqueguiner.github.io/faker2/"
Repository = "https://github.com/jqueguiner/faker2"
Issues = "https://github.com/jqueguiner/faker2/issues"
Changelog = "https://github.com/jqueguiner/faker2/blob/master/CHANGELOG.md"
Releases = "https://github.com/jqueguiner/faker2/releases"

[tool.maturin]
# Pure-Rust core (faker2._native) + thin Python binder in ./python/faker2.
python-source = "python"
module-name = "faker2._native"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
include = [
    { path = "python/faker2/data/first_names.parquet", format = "wheel" },
    { path = "python/faker2/data/balanced_params.json", format = "wheel" },
    { path = "python/faker2/data/locales.json", format = "wheel" },
    { path = "python/faker2/data/recipes.json", format = "wheel" },
]
